# KidBox

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  config.yaml  kidbox_design_contract.md  pyproject.toml  requirements.txt  toddler_portal_design_contract.md  toddlerbox_design_contract.md
scripts/: dev-run.sh  install_kidbox_service.sh  kidbox.service
src/kidbox/: __init__.py  config.py  launcher.py  paths.py
src/kidbox/paint/: __init__.py  __main__.py  app.py
src/kidbox/photos/: __init__.py  __main__.py  app.py
src/kidbox/typing/: __init__.py  __main__.py  app.py
src/kidbox/ui/: common.py
src/toddlerbox/: __init__.py  config.py  launcher.py
src/toddlerbox/paint/: __main__.py  app.py
src/toddlerbox/photos/: __main__.py  app.py
src/toddlerbox/typing/: __main__.py  app.py
src/toddlerbox/ui/: common.py
tests/: test_config.py  test_launcher.py  test_paint.py  test_paths.py  test_photos.py  test_typing.py
